# regression

./: .clang-tidy  .gitignore  CMakeLists.txt  dataset.csv  main.cpp
benchmark/: bench_dataset_traverse.cpp
cmake/: CompilerOptions.cmake  RequireBenchmarks.cmake  SetupBenchmarks.cmake  SetupCCache.cmake  SetupGBench.cmake  SetupLTO.cmake
include/: dataloader.hpp  linalg.hpp  regression.hpp
scripts/: generate_test_dataset.py
src/: dataloader.cpp  linalg.cpp  regression.cpp
